# status

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  Pipfile  README.md  TODO.md  docker-compose.yml  entrypoint.py  manage.py  package.json  pyproject.toml  vite.config.js  webpack.config.js
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0003_user_discord_webhook_url.py
crawler/: checks.py  fetcher.py  items.py  middlewares.py  parser.py  pipelines.py  runner.py  settings.py
crawler/spiders/: seo_spider.py
pages/: urls.py  views.py
pages/static_src/: index.js
pages/templates/: sitemap.xml
pages/templatetags/: social.py
properties/: admin.py  forms.py  models.py  urls.py  views.py
properties/migrations/: 0001_initial.py  0002_property_last_lighthouse_run_at_and_more.py  0003_property_properties__url_7229e0_idx_and_more.py  0004_remove_property_run_interval.py  0005_property_last_run_at_crawler_and_more.py  0006_property_crawler_insights.py  0007_add_alert_state_tracking.py  0008_lighthouse_error_tracking.py  0009_check_properties__propert_b3e3ac_idx.py  0010_crawl_lighthouse_state_tracking.py  0011_property_lighthouse_details.py
properties/static_src/: index.js
properties/templatetags/: properties_tags.py
samplefiles/: Caddyfile.sample  env.sample  post-receive.sample
status/: asgi.py  chromium.py  context_processors.py  lighthouse.py  mailer.py  urls.py  wsgi.py
status/settings/: __init__.py  development.py  production.py
status/static_src/: index.js
status/templates/: 403.html  404.html  (+2 more)
(+32 files in other folders)
